dodanie bazy danych

--- a/Ogłoszenia Drobne Web App/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Ogłoszenia Drobne Web App/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@inject SignInManager<Ogłoszenia_Drobne_Web_App.Models.AppUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
