--- a/Ogłoszenia Drobne Web App/Views/Home/Index.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <div class="adminAlert m-lg-5">
+        Admin Alert Placeholder
+    </div>
+</div>
+
+<div class="backgroundImage img-fluid">
 </div>
