--- a/Ogłoszenia Drobne Web App/Views/Shared/_Layout.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Shared/_Layout.cshtml
@@ -6,12 +6,13 @@
     <title>@ViewData["Title"] - Ogłoszenia_Drobne_Web_App</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/css/style.css" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+        <nav class="navbar gradient navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3 text-white">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Ogłoszenia_Drobne_Web_App</a>
+                <a class="navbar-brand text-white" asp-area="" asp-controller="Home" asp-action="Index">Ogłoszenia Drobne O.N</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -20,28 +21,28 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="BlackWords" asp-action="Index">Zakazane Słowa</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="BlackWords" asp-action="Index">Zakazane Słowa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Kategorie</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Categories" asp-action="Index">Kategorie</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Offers" asp-action="Index">Ogłoszenia</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Offers" asp-action="Index">Ogłoszenia</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer gradient text-white">
         <div class="container">
-            &copy; 2021 - Ogłoszenia_Drobne_Web_App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Ogłoszenia-Drobne-Neweglowski-Orzechowski MVC</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
