--- a/Ogłoszenia Drobne Web App/Views/Offers/Create.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Create.cshtml
@@ -1,24 +1,18 @@
 ﻿@model Ogłoszenia_Drobne_Web_App.Models.Offer
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Dodawanie Oferty";
 }
 
-<h1>Create</h1>
-
-<h4>Offer</h4>
-<hr />
-<div class="row">
+<div class="row justify-content-center mt-lg-5">
     <div class="col-md-4">
+        <h1> @ViewData["Title"] </h1>
+        <hr />
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
-            </div>
-            <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
+                <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -27,44 +21,22 @@
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <textarea asp-for="Description" class="form-control h100"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="CreationDate" class="control-label"></label>
-                <input asp-for="CreationDate" class="form-control" />
-                <span asp-validation-for="CreationDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastModificationDate" class="control-label"></label>
-                <input asp-for="LastModificationDate" class="form-control" />
-                <span asp-validation-for="LastModificationDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ExpirationDate" class="control-label"></label>
-                <input asp-for="ExpirationDate" class="form-control" />
-                <span asp-validation-for="ExpirationDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ViewCounter" class="control-label"></label>
-                <input asp-for="ViewCounter" class="form-control" />
-                <span asp-validation-for="ViewCounter" class="text-danger"></span>
-            </div>
-            <div class="form-group">
+            <div class="form-group align-text-top">
                 <label asp-for="Wage" class="control-label"></label>
                 <input asp-for="Wage" class="form-control" />
                 <span asp-validation-for="Wage" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Zatwierdź" class="btn btn-primary" />
             </div>
         </form>
+        <a asp-action="Index">Powrót</a>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
