--- a/Ogłoszenia Drobne Web App/Views/Shared/_LoginPartial.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Shared/_LoginPartial.cshtml
@@ -8,19 +8,19 @@
         <li class="nav-item">
             <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Witaj @User.Identity.Name!</a>
         </li>
-        <li class="nav-item">
+        @*<li class="nav-item">
             <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
                 <button type="submit" class="nav-link btn btn-link text-white">Wyloguj</button>
             </form>
-        </li>
+        </li>*@
     }
     else
     {
-        <li class="nav-item">
+        @*<li class="nav-item">
             <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Register">Zarejestruj</a>
         </li>
         <li class="nav-item">
             <a class="nav-link text-white" asp-area="Identity" asp-page="/Account/Login">Zaloguj</a>
-        </li>
+        </li>*@
     }
 </ul>
