--- a/Ogłoszenia Drobne Web App/wwwroot/css/style.css
+++ b/Ogłoszenia Drobne Web App/wwwroot/css/style.css
@@ -6,6 +6,7 @@
 
 body {
     width: 100%;
+    list-style-type: none;
 }
 
 .gradient {
@@ -33,6 +34,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    color: rgba(9,9,121,1) !important;
+}
+
 .adminAlert {
     border-width: 4px;
     border-style: solid;
@@ -47,6 +52,8 @@ a {
 }
 
 .backgroundImage {
+    margin: 0 !important;
+    padding: 0 !important;
     margin-top: 100px;
     width: auto !important;
     max-width: 100%;
@@ -56,4 +63,13 @@ a {
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
+}
+
+.h100 {
+    min-height: 200px !important;
+}
+
+.bg-secondary {
+    color: white !important;
+    background-color: rgba(9,9,121,1) !important;
 }
