--- a/Ogłoszenia Drobne Web App/Views/Home/Index.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="text-center">
     <div class="adminAlert m-lg-5">
-        Admin Alert Placeholder
+        @ViewData["Alert"]
     </div>
 </div>
 
