--- a/Ogłoszenia Drobne Web App/Views/Offers/Edit.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Edit.cshtml
@@ -1,23 +1,16 @@
 ﻿@model Ogłoszenia_Drobne_Web_App.Models.Offer
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edytuj Oferte";
 }
 
-<h1>Edit</h1>
-
-<h4>Offer</h4>
-<hr />
-<div class="row">
+<div class="row justify-content-center">
     <div class="col-md-4">
+        <h1 class="text-center mt-lg-5">@ViewData["Title"]</h1>
+        <hr />
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="UserId" class="control-label"></label>
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 <select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>
@@ -34,39 +27,16 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CreationDate" class="control-label"></label>
-                <input asp-for="CreationDate" class="form-control" />
-                <span asp-validation-for="CreationDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastModificationDate" class="control-label"></label>
-                <input asp-for="LastModificationDate" class="form-control" />
-                <span asp-validation-for="LastModificationDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ExpirationDate" class="control-label"></label>
-                <input asp-for="ExpirationDate" class="form-control" />
-                <span asp-validation-for="ExpirationDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ViewCounter" class="control-label"></label>
-                <input asp-for="ViewCounter" class="form-control" />
-                <span asp-validation-for="ViewCounter" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Wage" class="control-label"></label>
                 <input asp-for="Wage" class="form-control" />
                 <span asp-validation-for="Wage" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Zapisz" class="btn btn-primary buttonLogin" />
             </div>
+            <a asp-action="MyOffers">Powrót</a>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
