--- a/Ogłoszenia Drobne Web App/wwwroot/css/style.css
+++ b/Ogłoszenia Drobne Web App/wwwroot/css/style.css
@@ -34,9 +34,9 @@ a {
     text-decoration: none;
 }
 
-a:hover {
-    color: rgba(9,9,121,1) !important;
-}
+    a:hover {
+        color: rgba(9,9,121,1) !important;
+    }
 
 .adminAlert {
     border-width: 4px;
@@ -72,4 +72,14 @@ a:hover {
 .bg-secondary {
     color: white !important;
     background-color: rgba(9,9,121,1) !important;
+}
+
+.translate {
+    transform: translate(-200px,-10px);
+}
+
+dl {
+    display: inline-block;
+    overflow: hidden;
+    text-align: left;
 }
