--- a/Ogłoszenia Drobne Web App/wwwroot/css/style.css
+++ b/Ogłoszenia Drobne Web App/wwwroot/css/style.css
@@ -1,4 +1,4 @@
-﻿html, .container-fluid .row {
+﻿html, .container-fluid, .row {
     margin: 0 !important;
     padding: 0 !important;
     width: 100%;
