--- a/Ogłoszenia Drobne Web App/Views/Offers/Index.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Ogłoszenia_Drobne_Web_App.Models.Offer>
+﻿@model Ogłoszenia_Drobne_Web_App.Pagination.PaginatedList<Ogłoszenia_Drobne_Web_App.Models.Offer>
 
 @{
     ViewData["Title"] = "Index";
@@ -24,25 +24,22 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model[0].Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Description)
+                @Html.DisplayNameFor(model => model[0].Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ExpirationDate)
+                @Html.DisplayNameFor(model => model[0].ExpirationDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ViewCounter)
+                @Html.DisplayNameFor(model => model[0].ViewCounter)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Wage)
+                @Html.DisplayNameFor(model => model[0].Wage)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.User)
+                @Html.DisplayNameFor(model => model[0].Category)
             </th>
             <th></th>
         </tr>
@@ -56,7 +53,7 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
-                </td>               
+                </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.ExpirationDate)
                 </td>
@@ -70,12 +67,29 @@
                     @Html.DisplayFor(modelItem => item.Category.Id)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.User.Id)
-                </td>
-                <td>
                     <a asp-action="Details" asp-route-id="@item.Id">Szczegóły</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
+
+@{
+    var prevDisabled = !Model.HasPreviousPage ? "disabled" : "";
+    var nextDisabled = !Model.HasNextPage ? "disabled" : "";
+}
+
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex - 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default buttonDetails @prevDisabled">
+    Poprzednia
+</a>
+<a asp-action="Index"
+   asp-route-sortOrder="@ViewData["CurrentSort"]"
+   asp-route-pageNumber="@(Model.PageIndex + 1)"
+   asp-route-currentFilter="@ViewData["CurrentFilter"]"
+   class="btn btn-default buttonDetails @nextDisabled">
+    Nastepna
+</a>
