--- a/Ogłoszenia Drobne Web App/Views/Categories/Delete.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Categories/Delete.cshtml
@@ -1,33 +1,34 @@
 ﻿@model Ogłoszenia_Drobne_Web_App.Models.Category
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Kategorie - Usuń";
 }
+<div class="container">
+    <h1>Usuń kategorię</h1>
 
-<h1>Delete</h1>
-
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ParentCategory)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParentCategory.Id)
-        </dd class>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <h3>Czy na pewno chcesz usunąć tę kategorię?</h3>
+    <div>
+        
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.CategoryName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.CategoryName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ParentCategory)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ParentCategory.CategoryName)
+            </dd>
+        </dl>
+        <h6 class="text-danger">@ViewBag.ErrorMessage</h6>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Potwierdź usunięcie" class="btn btn-danger" /> |
+            <a asp-action="Index">Anuluj</a>
+        </form>
+    </div>
 </div>
