--- a/Ogłoszenia Drobne Web App/Views/Categories/Details.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Categories/Details.cshtml
@@ -1,30 +1,97 @@
 ﻿@model Ogłoszenia_Drobne_Web_App.Models.Category
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Kategore - Szczegóły";
 }
 
-<h1>Details</h1>
+<div class="container">
+    <h1>Szczegóły</h1>
 
-<div>
-    <h4>Category</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ParentCategory)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ParentCategory.Id)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div>
+        <h4>Kategoria</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.CategoryName)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.CategoryName)
+            </dd>
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ParentCategory)
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.ParentCategory.CategoryName)
+            </dd>
+        </dl>
+    </div>
+    <div class="mt-2">
+        <table class="table table-striped col-8 col-sm-12">
+            <thead class="thead-light">
+                <tr>
+                    <td>
+                        Nazwa atrybutu
+                    </td>
+                    <td>
+                        Typ
+                    </td>
+                    <td>
+                        Własny/Odziedziczony
+                    </td>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.CategoryAtributes)
+                {
+                    <tr>
+                        <td>
+                            @item.Name
+                        </td>
+                        <td>
+                            @switch (item)
+                            {
+                                case BoolAtribute value:
+                            <span>
+                                Checkbox
+                            </span>
+                                    break;
+                                case DateTimeAtribute value:
+                            <span>
+                                Data
+                            </span>
+                                    break;
+                                case DoubleAtribute value:
+                        <span>
+                            Zmiennoprzecinkowy
+                        </span>
+                                    break;
+                                case NumberAtribute value:
+                        <span>
+                            Numer
+                        </span>
+                                    break;
+                                case TextAtribute value:
+                        <span>
+                            Tekstowy
+                        </span>
+                                    break;
+                            }
+                        </td>
+                        <td>
+                            @if (item.CategoryId == Model.Id) {<span>Własny</span>}
+                            else {<span> Odziedziczony </span>}
+
+
+                            </td>
+
+
+                        </tr>
+                } 
+            </tbody>
+        </table>
+    </div>
+    <div>
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edytuj</a> |
+        <a asp-action="Index">Wróć do listy</a>
+    </div>
 </div>
