--- a/Ogłoszenia Drobne Web App/Views/Offers/Details.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Details.cshtml
@@ -4,63 +4,65 @@
     ViewData["Title"] = "Szczegóły oferty";
 }
 
-<div class="justify-content-center">
-    <h1 class="text-center mt-lg-5">@ViewData["Title"]</h1>
-    <hr />
-    <div class="justify-content-center">
+<div class="d-flex align-items-center justify-content-center flex-column">
+    <div class="col-12">
+        <h1 class="text-center mt-lg-5">@ViewData["Title"]</h1>
+        <hr />
+    </div>
+    <div>
         <dl class="row">
-            <dt class="col-sm-2">
+            <dt class="col-sm-6 text-right">
                 @Html.DisplayNameFor(model => model.Title)
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-6 text-left">
                 @Html.DisplayFor(model => model.Title)
             </dd>
-            <dt class="col-sm-2">
+            <dt class="col-sm-6 text-right">
                 @Html.DisplayNameFor(model => model.Description)
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-6 text-left">
                 @Html.DisplayFor(model => model.Description)
             </dd>
-            <dt class="col-sm-2">
+            <dt class="col-sm-6 text-right">
                 @Html.DisplayNameFor(model => model.CreationDate)
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-6 text-left">
                 @Html.DisplayFor(model => model.CreationDate)
             </dd>
-            <dt class="col-sm-2">
+            <dt class="col-sm-6 text-right">
                 @Html.DisplayNameFor(model => model.LastModificationDate)
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-6 text-left">
                 @Html.DisplayFor(model => model.LastModificationDate)
             </dd>
-            <dt class="col-sm-2">
+            <dt class="col-sm-6 text-right">
                 @Html.DisplayNameFor(model => model.ExpirationDate)
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-6 text-left">
                 @Html.DisplayFor(model => model.ExpirationDate)
             </dd>
-            <dt class="col-sm-2">
+            <dt class="col-sm-6 text-right">
                 @Html.DisplayNameFor(model => model.ViewCounter)
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-6 text-left">
                 @Html.DisplayFor(model => model.ViewCounter)
             </dd>
-            <dt class="col-sm-2">
+            <dt class="col-sm-6 text-right">
                 @Html.DisplayNameFor(model => model.Wage)
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-6 text-left">
                 @Html.DisplayFor(model => model.Wage)
             </dd>
-            <dt class="col-sm-2">
+            <dt class="col-sm-6 text-right">
                 @Html.DisplayNameFor(model => model.Category)
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-6 text-left">
                 @Html.DisplayFor(model => model.Category.Id)
             </dd>
-            <dt class="col-sm-2">
+            <dt class="col-sm-6 text-right">
                 @Html.DisplayNameFor(model => model.User)
             </dt>
-            <dd class="col-sm-10">
+            <dd class="col-sm-6 text-left">
                 @Html.DisplayFor(model => model.User.Id)
             </dd>
         </dl>
