Smtp outlook provider resert pass and change email

--- a/Ogłoszenia Drobne Web App/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Ogłoszenia Drobne Web App/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,10 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Zmiana hasła";
 }
 
 <h1>@ViewData["Title"]</h1>
 <p>
-    Please check your email to reset your password.
+    Sprawdź pocztę aby zmienić hasło.
 </p>
-
