--- a/Ogłoszenia Drobne Web App/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+++ b/Ogłoszenia Drobne Web App/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model ConfirmEmailModel
 @{
-    ViewData["Title"] = "Confirm email";
+    ViewData["Title"] = "Potwierdzenie konta";
 }
 
 <h1>@ViewData["Title"]</h1>
