--- a/Ogłoszenia Drobne Web App/Views/Offers/Index.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Index.cshtml
@@ -64,7 +64,7 @@
                     @Html.DisplayFor(modelItem => item.Wage)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Category.Id)
+                    @Html.DisplayFor(modelItem => item.Category.CategoryName)
                 </td>
                 <td>
                     <a asp-action="Details" asp-route-id="@item.Id">Szczegóły</a>
