--- a/Ogłoszenia Drobne Web App/Views/Shared/_Layout.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Ogłoszenia_Drobne_Web_App</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    @*@if (Context.Request.Cookies["darkmode"] == "true") { }*@
     <link rel="stylesheet" href="~/css/style.css" />
 </head>
 <body>
