--- a/Ogłoszenia Drobne Web App/Views/Admin/UserList.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Admin/UserList.cshtml
@@ -55,11 +55,11 @@
                 <td>
                     @if (user.LockoutEnabled == true && user.LockoutEnd > DateTime.Now)
                     {
-                        <a asp-action="UnblockUser" asp-route-id="@user.Id">Odblokuj</a>
+                        <a class="btn btn-primary buttonDetails" asp-action="UnblockUser" asp-route-id="@user.Id">Odblokuj</a>
                     }
                     else
                     {
-                        <a asp-action="BlockUser" asp-route-id="@user.Id">Zablokuj</a>
+                        <a class="btn btn-primary buttonDetails" asp-action="BlockUser" asp-route-id="@user.Id">Zablokuj</a>
                     }
                 </td>
             </tr>
