--- a/Ogłoszenia Drobne Web App/Views/Categories/Create.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Categories/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model Ogłoszenia_Drobne_Web_App.Models.Category
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Tworzenie kategorii";
 }
 
-<h1>Create</h1>
+<h1>Tworznie</h1>
 
-<h4>Category</h4>
+<h4>Kategorii</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -22,14 +22,14 @@
                 <select asp-for="ParentCategoryId" class ="form-control" asp-items="ViewBag.ParentCategoryId"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn buttonDetails" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="btn buttonDetails" asp-action="Index">Powrót</a>
 </div>
 
 @section Scripts {
