--- a/Ogłoszenia Drobne Web App/Views/Shared/_Layout.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                         <a class="nav-link dropdown-toggle mt-1" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span>Panel administracyjny</span>
                         </a>
-                        <div id="text" class="dropdown-menu dropdown-menu-right bg-secondary translate" aria-labelledby="navbarDropdown">
+                        <div id="text" class="dropdown-menu dropdown-menu-right dropdownColor translate" aria-labelledby="navbarDropdown">
                             @*<a class="dropdown-item nav-link text-white" asp-area="" asp-controller="Category" asp-action="Index">Lista kategorii</a>
                                 <a class="dropdown-item nav-link text-white" asp-area="" asp-controller="Category" asp-action="Create">Dodaj kategorię</a>*@
                             <a class="dropdown-item nav-link" asp-area="" asp-controller="Admin" asp-action="UserList">Lista użytkowników</a>
@@ -69,7 +69,7 @@
                     <a class="nav-link dropdown-toggle mt-1" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Zalogowany
                     </a>
-                    <div id="text" class="dropdown-menu dropdown-menu-right bg-secondary mt-0" aria-labelledby="navbarDropdown">
+                    <div id="text" class="dropdown-menu dropdown-menu-right dropdownColor mt-0" aria-labelledby="navbarDropdown">
                         @*<a class="dropdown-item nav-link text-white" asp-area="" asp-controller="User" asp-action="MyDetails">Szczegóły konta</a>
                             <a class="dropdown-item nav-link text-white" asp-area="" asp-controller="User" asp-action="MyEdit">Edytuj dane</a>*@
                         <a class="dropdown-item nav-link" asp-area="" asp-controller="Offers" asp-action="MyOffers">Moje oferty</a>
