--- a/Ogłoszenia Drobne Web App/Views/Offers/Create.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Create.cshtml
@@ -30,10 +30,10 @@
                 <span asp-validation-for="Wage" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Zatwierdź" class="btn btn-primary" />
+                <input type="submit" value="Zatwierdź" class="btn buttonDetails" />
             </div>
         </form>
-        <a asp-action="Index">Powrót</a>
+        <a class="btn buttonDetails" asp-action="Index">Powrót</a>
     </div>
 </div>
 
