--- a/Ogłoszenia Drobne Web App/wwwroot/css/contrast.css
+++ b/Ogłoszenia Drobne Web App/wwwroot/css/contrast.css
@@ -129,3 +129,9 @@ a:hover {
     margin: 3px;
     margin-top: 6px;
 }
+
+.dropdownColor {
+    background-color: black;
+    border-width: 2px;
+    border-color: yellow;
+}
