Pagination size select

--- a/Ogłoszenia Drobne Web App/Views/Categories/Create.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Categories/Create.cshtml
@@ -1,23 +1,9 @@
 ﻿@model Ogłoszenia_Drobne_Web_App.ViewModels.CreateCategoryViewModel
 
 @{
-    ViewData["Title"] = "Tworzenie kategorii";
+    ViewData["Title"] = "Create";
 }
 
-<<<<<<< HEAD
-<h1>Tworznie</h1>
-
-<h4>Kategorii</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CategoryName" class="control-label"></label>
-                <input asp-for="CategoryName" class="form-control" />
-                <span asp-validation-for="CategoryName" class="text-danger"></span>
-=======
 <div class="container">
     <h1>Dodaj nową kategorię</h1>
 
@@ -42,12 +28,11 @@
                     <label>Drzewo kategorii</label>
                     <div class="category-tree"></div>
                 </div>
->>>>>>> 7fa63d7b2b3b220642c9f0b36c66e04a986df4c5
             </div>
             <div class="col-md-8">
                 <div class="col-md-6">
                     <div class="form-group addAtributeDiv">
-                        <button type="button" class="addAtributeButton btn btn-outline-primary">Dodaj atrybut</button>
+                        <button type="button" class="addAtributeButton btn buttonDetails">Dodaj atrybut</button>
                     </div>
                     <div class="addAtributeForm" style="display:none">
                         <div class="form-group">
@@ -60,15 +45,11 @@
                             <select class="form-control" name="AtributeType" asp-items="ViewBag.AtributeTypes"></select>
                         </div>
                         <div class="form-group">
-                            <button type="button" class="addAtributeSubmitButton btn btn-outline-primary">Dodaj</button>
+                            <button type="button" class="addAtributeSubmitButton btn buttonDetails">Dodaj</button>
                         </div>
                     </div>
                 </div>
             </div>
-<<<<<<< HEAD
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn buttonDetails" />
-=======
             <div class="col-md-8">
                 <table class="table table-striped atributeTable">
                     <thead class="thead-light">
@@ -79,34 +60,22 @@
                         </tr>
                     </thead>
                     <tbody>
-
                     </tbody>
                 </table>
->>>>>>> 7fa63d7b2b3b220642c9f0b36c66e04a986df4c5
             </div>
         </div>
         <div class="form-group">
-           
-            <input type="submit" value="Stwórz" class="btn btn-primary" />
+
+            <input type="submit" value="Stwórz" class="btn buttonDetails" />
         </div>
-
-
     </form>
 
-<<<<<<< HEAD
-<div>
-    <a class="btn buttonDetails" asp-action="Index">Powrót</a>
-</div>
-=======
->>>>>>> 7fa63d7b2b3b220642c9f0b36c66e04a986df4c5
-
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a class="btn buttonDetails" asp-action="Index">Powrót</a>
     </div>
 </div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
     <script src="~/js/Categories/Create.js">
-
     </script>
 }
