--- a/Ogłoszenia Drobne Web App/Views/Offers/Index.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Offers/Index.cshtml
@@ -99,8 +99,57 @@
         Ilość ofert
     </button>
     <div class="dropdown-menu dropdownColor" aria-labelledby="btnPageSelect">
-        <a class="dropdown-item" href="#">5</a>
-        <a class="dropdown-item" href="#">10</a>
-        <a class="dropdown-item" href="#">15</a>
+        <a class="dropdown-item" id="five">5</a>
+        <a class="dropdown-item" id="ten">10</a>
+        <a class="dropdown-item" id="ff">15</a>
     </div>
 </div>
+
+<script>
+    if (getCookie("page") === undefined)
+        setCookie("page", 5, 365);
+
+    document.getElementById("five").onclick = function () { fivePerPage() };
+    document.getElementById("ten").onclick = function () { tenPerPage() };
+    document.getElementById("ff").onclick = function () { ffPerPage() };
+
+    function fivePerPage() {
+        setCookie("page", 5, 365);
+        location.reload();
+    }
+
+    function tenPerPage() {
+        setCookie("page", 10, 365);
+        location.reload();
+    }
+
+    function ffPerPage() {
+        setCookie("page", 15, 365);
+        location.reload();
+    }
+
+    function getCookie(name) {
+        var dc = document.cookie;
+        var prefix = name + "=";
+        var begin = dc.indexOf("; " + prefix);
+        if (begin == -1) {
+            begin = dc.indexOf(prefix);
+            if (begin != 0) return null;
+        }
+        else {
+            begin += 2;
+            var end = document.cookie.indexOf(";", begin);
+            if (end == -1) {
+                end = dc.length;
+            }
+        }
+        return decodeURI(dc.substring(begin + prefix.length, end));
+    }
+
+    function setCookie(cname, cvalue, exdays) {
+        var d = new Date();
+        d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
+        var expires = "expires=" + d.toUTCString();
+        document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+        }
+</script>
