--- a/Ogłoszenia Drobne Web App/Views/Shared/_Layout.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Shared/_Layout.cshtml
@@ -9,15 +9,19 @@
     @if (Context.Request.Cookies["theme"] == "darkmode")
     {
         <link rel="stylesheet" href="~/css/darkmode.css" />
-}
-    @if (Context.Request.Cookies["theme"] == "contrast")
+    }
+    else if (Context.Request.Cookies["theme"] == "contrast")
     {
         <link rel="stylesheet" href="~/css/contrast.css" />
-}
-    @if (Context.Request.Cookies["theme"] == "default")
+    }
+    else if (Context.Request.Cookies["theme"] == "default")
     {
         <link rel="stylesheet" href="~/css/style.css" />
-}
+    }
+    else
+    {
+        <link rel="stylesheet" href="~/css/style.css" />
+    }
 </head>
 <body>
     <header>
@@ -119,9 +123,8 @@
 
     <script>
 
-        var cookieTheme = getCookie("theme");
-        if (cookieTheme === undefined)
-            document.cookie = "theme=default";
+        if (getCookie("theme") === undefined)
+            setCookie("theme", "default", 365);
 
         document.getElementById("darkmode").onclick = function () { darkmodeTheme() };
         document.getElementById("contrast").onclick = function () { contrastTheme() };
