--- a/Ogłoszenia Drobne Web App/Views/Shared/_Layout.cshtml
+++ b/Ogłoszenia Drobne Web App/Views/Shared/_Layout.cshtml
@@ -35,12 +35,12 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="BlackWords" asp-action="Index">Zakazane Słowa</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Categories" asp-action="Index">Kategorie</a>
-                        </li>
+                        @*<li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="BlackWords" asp-action="Index">Zakazane Słowa</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Categories" asp-action="Index">Kategorie</a>
+                            </li>*@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Offers" asp-action="Index">Ogłoszenia</a>
                         </li>
@@ -58,6 +58,9 @@
                         <div id="text" class="dropdown-menu dropdown-menu-right dropdownColor translate" aria-labelledby="navbarDropdown">
                             @*<a class="dropdown-item nav-link text-white" asp-area="" asp-controller="Category" asp-action="Index">Lista kategorii</a>
                                 <a class="dropdown-item nav-link text-white" asp-area="" asp-controller="Category" asp-action="Create">Dodaj kategorię</a>*@
+                            <a class="dropdown-item nav-link" asp-area="" asp-controller="Admin" asp-action="ReportedUsersList">Lista zgłoszeń</a>
+                            <a class="dropdown-item nav-link" asp-area="" asp-controller="BlackWords" asp-action="Index">Słowa zakazane</a>
+                            <a class="dropdown-item nav-link" asp-area="" asp-controller="Categories" asp-action="Index">Kategorie</a>
                             <a class="dropdown-item nav-link" asp-area="" asp-controller="Admin" asp-action="UserList">Lista użytkowników</a>
                             <a class="dropdown-item nav-link" asp-area="" asp-controller="Admin" asp-action="AddAdminAlert">Alert</a>
                             @*<a class="dropdown-item nav-link text-white" asp-area="" asp-controller="Offers" asp-action="ReportedOffers">Zgłoszone oferty</a>
